<resources>
    <string name="app_name">Kita Store</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="atau">Atau</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="history">History</string>
</resources>
