<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/bg_login"
        android:gravity="center"
        android:background="@color/bg_login"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:src="@drawable/ks"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:hint="@string/username"
                    android:padding="10dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:padding="10dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/alamat"
                    android:hint="@string/alamat"
                    android:padding="10dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:passwordToggleEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:padding="10dp"
                        android:inputType="textPassword"
                        android:background="@drawable/custom_edittext"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:visibility="gone"
                    android:text="@string/login"
                    android:padding="10dp"
                    android:textSize="20dp"
                    android:background="@drawable/custom_button"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/atau"
                    android:visibility="gone"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/register"
                    android:text="@string/register"
                    android:textSize="20dp"
                    android:padding="10dp"
                    android:background="@drawable/custom_button"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>